// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic 1`] = `
"export const ssg = false

export const ssr = true

export const dev = true
export const NUXT_I18N_MODULE_ID = \\"@nuxtjs/i18n\\"
export const NUXT_I18N_PRECOMPILE_ENDPOINT = \\"/__i18n__/precompile\\"
export const NUXT_I18N_PRECOMPILED_LOCALE_KEY = \\"i18n-locales\\"
export const isSSG = false
export const isSSR = true
"
`;

exports[`lazy 1`] = `
"export const ssg = false

export const ssr = true

export const dev = true
export const NUXT_I18N_MODULE_ID = \\"@nuxtjs/i18n\\"
export const NUXT_I18N_PRECOMPILE_ENDPOINT = \\"/__i18n__/precompile\\"
export const NUXT_I18N_PRECOMPILED_LOCALE_KEY = \\"i18n-locales\\"
export const isSSG = false
export const isSSR = true
"
`;

exports[`locale file in nested 1`] = `
"export const ssg = false

export const ssr = true

export const dev = true
export const NUXT_I18N_MODULE_ID = \\"@nuxtjs/i18n\\"
export const NUXT_I18N_PRECOMPILE_ENDPOINT = \\"/__i18n__/precompile\\"
export const NUXT_I18N_PRECOMPILED_LOCALE_KEY = \\"i18n-locales\\"
export const isSSG = false
export const isSSR = true
"
`;

exports[`multiple files 1`] = `
"export const ssg = false

export const ssr = true

export const dev = true
export const NUXT_I18N_MODULE_ID = \\"@nuxtjs/i18n\\"
export const NUXT_I18N_PRECOMPILE_ENDPOINT = \\"/__i18n__/precompile\\"
export const NUXT_I18N_PRECOMPILED_LOCALE_KEY = \\"i18n-locales\\"
export const isSSG = false
export const isSSR = true
"
`;

exports[`toCode: function (arrow) 1`] = `
"export const ssg = false

export const ssr = true

export const dev = true
export const NUXT_I18N_MODULE_ID = \\"@nuxtjs/i18n\\"
export const NUXT_I18N_PRECOMPILE_ENDPOINT = \\"/__i18n__/precompile\\"
export const NUXT_I18N_PRECOMPILED_LOCALE_KEY = \\"i18n-locales\\"
export const isSSG = false
export const isSSR = true
"
`;

exports[`toCode: function (named) 1`] = `
"export const NUXT_I18N_MODULE_ID = \\"@nuxtjs/i18n\\"
export const NUXT_I18N_PRECOMPILE_ENDPOINT = \\"/__i18n__/precompile\\"
export const NUXT_I18N_PRECOMPILED_LOCALE_KEY = \\"i18n-locales\\"
export const isSSG = false
export const isSSR = true
"
`;

exports[`vueI18n: path 1`] = `
"export const ssg = false

export const ssr = true

export const dev = true
export const NUXT_I18N_MODULE_ID = \\"@nuxtjs/i18n\\"
export const NUXT_I18N_PRECOMPILE_ENDPOINT = \\"/__i18n__/precompile\\"
export const NUXT_I18N_PRECOMPILED_LOCALE_KEY = \\"i18n-locales\\"
export const isSSG = false
export const isSSR = true
"
`;
